# SingleSecondChess

./: .gitignore  Dockerfile  Makefile  README.md  airgap_runner.sh  chess.hpp  comp_runner.sh  leaderboards.sh  wrapper.cpp
.devcontainer/: Dockerfile  devcontainer.json
example_bots/: ab_tree_bot.cpp  bad_bot.cpp  bad_bot_internet.cpp  random_move_bot.cpp  stupid_bot.cpp
web/: create_db.py  docker-compose.yml  models.py  pyproject.toml  run_dev.py  run_prod.py
web/app/: __init__.py  models.py  routes.py
web/app/blueprints/: game_logic.py  web_logic.py
web/app/templates/: base.html  bot.html  bots.html  duel.html  homepage.html  new_bot.html  play_game.html  profile.html
